--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 .header-content{
     display:flex;
 
@@ -6,23 +5,23 @@
 }
 .header-home{
     height: 100vh;
-    background: url('https://images.unsplash.com/photo-1656355691828-5f56cb726437?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0OXx8fGVufDB8fHx8&auto=format&fit=crop&w=1600&q=60');
+    background: url('https://images.unsplash.com/photo-1655667995118-56d57c6f628e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1600&q=80');
     background-repeat: no-repeat;
 }
 .header{                        
     width:120px;
 
 }
-.header-content .header h1{
-    font-size: xxx-large;
-     width: 120px;
+.header-content .header img{
+
+     width: 200px;
 
 
 }
 .header-content .list{
     display:flex;
     padding: 20px;
-    margin-left: 700px;
+    margin-left: 550px;
     font-size: 30px;
     text-decoration: none;
 
@@ -32,6 +31,7 @@
     text-decoration: none;
     color: white;
     padding: 30px;
+    cursor: pointer;
 
 }
 .list a:hover{
@@ -45,8 +45,9 @@ li{
 *{
     margin: 0;
 }
+
 .header-home .header-text h1{
-    margin-top:270px;
+    margin-top:200px;
     text-align: center;
     color: white;
 }
@@ -61,7 +62,22 @@ li{
     font-size: x-large;
     color:rgb(251, 254, 62);
 }
-.btn-click{
+.btn-light {
+    color: #333;
+    background-color: white;
+    
+}
+
+.btn-main, .btn-light, .btn-dark {
+    display: inline-block;
+    padding: 0.8rem;
+    transition: all 0.5s;
+    border: none;
+    cursor: pointer;
+    text-decoration: none;
+
+}
+.btn-light{
     margin-left: 725px;
     padding:15px;
     margin-top: 10px;
@@ -291,174 +307,89 @@ hr{
     font-style: normal;
 }
 .footer{
-    display: flex;
-    position: relative;
-    
+    background-color: #494848;
+   
 }
-.list_2{
-    list-style-type: none;
-    margin: auto;
-    color: black;
-    font-size: large;
-    
+.footer-1{
+   display: flex;
 }
-.process-icon_2{
-    border-radius: 50%;
-    background: rgb(51, 51, 51);
-    color: white;
-    padding: 15px;
-    transition: all 1s;
-}
-.process-icon_2:hover{
-    background: rgb(245, 252, 27);
-}
-.footer_2{
-    background: rgb(110, 108, 108);
-    height: 500px;
-}
-.bottom_line{
-    border: 1px solid white;
-    width: 100px;
-    background: rgb(26, 255, 0);
-}
-@media only screen and (max-width: 1000px){
-     
+.footer .footer-1 .location{
+   margin-left: 250px;
+   padding:20px;
+   margin-top:30px;
+   color: white;
+   
 }
 
-.header{
-    height: 100px;
-    width:1600px;
-    background: url('https://images.unsplash.com/photo-1656355691828-5f56cb726437?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxlZGl0b3JpYWwtZmVlZHw0OXx8fGVufDB8fHx8&auto=format&fit=crop&w=1600&q=60');
-    background-repeat: no-repeat;
+.footer .footer-1 .location h3{
+   margin-bottom: 20px;
+   
+   margin-left: 20px;
 }
-.header_home .list{
-    display:flex;
-    padding: 20px;
-    margin-left: 700px;
-    font-size: 30px;
-    text-decoration: none;
-    
+.footer  .footer-1 .location h3 i{
+   padding: 10px;
+   width: 20px;
+   height: 20px;
+   background-color: gray;
+   list-style: none;
+   border-radius: 50%;
+}
 
+.footer  .footer-1 .company{
+   padding:20px;
+   margin-top: 30px;
+   color: white;
+}
+.footer  .footer-1 .company h2{
+   margin-left: 150px;
+   margin-bottom: 20px;
+   color: orange;
+}
+.footer  .footer-1 .company p{
+  width: 250px;
+  margin-left: 150px;
+  margin-bottom: 20px;
+}
+.footer  .footer-1 .navigate li{
+  margin-left: 100px;
+  
+  margin-top: 40px;
+  justify-content: center;
+  
+}
+.footer  .footer-1 .navigate li a{
+   color: white;
+   text-decoration: none;
+   padding: 5px;
+   display: flex;
+   font-size: 25px;   
+}
+.footer  .footer-1 .navigate li h2{
+   color: orange;
+   margin-bottom: 10px;
 
 }
-.list a{
-    text-decoration: none;
-    color: white;
-    padding: 30px;
+.footer .footer-1 .navigate li a:hover{
+   color: red;
+}
 
+.footer .footer-icon{
+   margin-left: 680px;
+  
+   
 }
-.list a:hover{
-    background-color: black;
-
+.footer .footer-icon i{
+   width: 30px;
+   height: 30px;
+   background-color: gray;
+   list-style: none;
+   border-radius: 50%;
+   padding: 10px;
+   color: white;
+   
 }
-.about_part_1{
-    background: rgb(235, 235, 235);
-    text-align: center;
-    align-items: center;
-}
-.bottom_line_2{
-    border: 2px solid blue;
-    background: blue;
-    margin-left: 20px;
-}
-.technical_skill{
-    background: #333;
-    color: white;
-    height: 550px;
-}
-.skill{
-    margin-left: 150px;
-    margin-right: 150px;
-}
-.people{
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin-left: 100px;
-    margin-right: 100px;
-    list-style-type: none;
-    padding: auto;
-}
-.quote{
-    padding: 10px;
-    text-align: center;
-}
-.para{
-    border: 1px solid ;
-    border-radius: 5px;
-    text-align: left;
-}
-.img{
-    border-radius: 50%;
-    height: 60px;
-    align-items: left;
-}
-#level1{
-    background: rgb(179, 176, 176);
-    border-radius: 5px;
-    overflow: hidden;
-    height: 20px;
-    width: 1200px;
-}
-#progresshtml{
-    height: 100%;
-    width: 0;
-    background-color: blue;
-    transition: 5s ease 0.5s;
-}
-#level2{
-    background: rgb(179, 176, 176);
-    border-radius: 5px;
-    overflow: hidden;
-    height: 20px;
-    width: 1200px;
-}
-#progresscss{
-    height: 100%;
-    width: 0;
-    background: blue;
-    transition: 3s ease 0.5s;
-}
-#level3{
-    background: rgb(179, 176, 176);
-    border-radius: 5px;
-    overflow: hidden;
-    height: 20px;
-    width: 1200px;
-}
-#progressjs{
-    height: 100%;
-    width: 0;
-    background: blue;
-    transition: 3s ease 0.5s;
-}
-#level4{
-    background: rgb(179, 176, 176);
-    border-radius: 5px;
-    overflow: hidden;
-    height: 20px;
-    width: 1200px;
-}
-#progressreact{
-    height: 100%;
-    width: 0;
-    background: blue;
-    transition: 3s ease 0.5s;
-}
-#level5{
-    background: rgb(179, 176, 176);
-    border-radius: 5px;
-    overflow: hidden;
-    height: 20px;
-    width: 1200px;
-}
-#progresspython{
-    height: 100%;
-    width: 0;
-    background: blue;
-    transition: 3s ease 0.5s;
-}
-.img_2{
-    display: grid;
-    height: 200px;
+.footer .footer-p p{
+   color: white;
+   text-align: center;
+   margin-top: 150px;
 }
